<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/tooltip"
    android:orientation="vertical" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:text="@string/dialog_regist_success"
        android:textColor="#000000"
        android:textStyle="bold"
        android:paddingTop="20dp"
        android:textSize="25sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="#ff000000" />

    <TextView
        android:id="@+id/DoctorName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:gravity="center_horizontal"
        android:text="扁鹊"
        android:textColor="#000000"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/role"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="12dp"
        android:gravity="center_horizontal"
        android:text="医生"
        android:ems="12"
        android:ellipsize="end"
        android:textColor="#000000"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/AppointmentNo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"
        android:text="3002"
        android:textColor="#000000"
        android:textSize="80sp" />

    <TextView
        android:id="@+id/WaitingCount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:gravity="center_horizontal"
        android:text="@string/dialog_regist_wait_people"
        android:textColor="#000000"
        android:textSize="20sp" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_marginTop="20dp"
        android:background="#80808080" />

    <TextView
        android:id="@+id/sure"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:padding="7dp"
        android:gravity="center"
        android:text="@string/confirm"
        android:textColor="#2480F1"
        android:textSize="20sp" />

</LinearLayout>